--- a/frontend_mentor/css/order_summary3.css
+++ b/frontend_mentor/css/order_summary3.css
@@ -5,8 +5,8 @@
     --btn-box-shadow: 5px 10px 20px hsl(245, 75%, 90%);
     --dark-blue: hsl(223, 47%, 23%);
     --desaturated-blue: hsl(224, 100%, 55 %);
-    --very pale blue: hsl(225, 100%, 98%);
-    --bright blue: hsl(245, 75%, 52%)
+    --very-pale-blue: hsl(225, 100%, 98%);
+    --bright-blue: hsl(245, 75%, 52%)
     --light-grey: rgh(136, 133, 133);
     --white: rgb(255, 255, 255);
     --red: Red;
