--- a/frontend_mentor/css/fylo-data-strorage.css
+++ b/frontend_mentor/css/fylo-data-strorage.css
@@ -49,8 +49,8 @@ body{
      border-radius: 50px;
     -webkit-appearance: none;
     width: 100%;
-    height: 15px;
-    background: blue;
+    height: 10px;
+    background: hsl(229, 73%, 7%);
     outline: none;
     opacity: 0.7;
     -webkit-transition: .2s;
@@ -64,9 +64,9 @@ body{
   .slider::-webkit-slider-thumb {border-radius: 50px;
   border-radius: 50px;
     -webkit-appearance: none;
-    appearance: none;
-    width: 25px;
-    height: 25px;
+    appearance: hsl(335, 100%, 65%);
+    width: 15px;
+    height: 15px;
     background: hsl(335, 100%, 65%);
     cursor: pointer;
   }
@@ -81,4 +81,9 @@ body{
   p{
       align: center;
       color: azure;
+  }
+  .value{
+    display: flex;
+    justify-content: space-between;
+    color: hsl(243, 100%, 93%);
   }
