--- a/frontend_mentor/css/fylo-data-strorage.css
+++ b/frontend_mentor/css/fylo-data-strorage.css
@@ -6,84 +6,272 @@ body{
     font-family: 'Raleway', sans-serif;
     font-family: 'Red Hat Display', sans-serif;
     font-size: 14px;
-    background: hsl(229, 57%, 11%);
-
-}
-.bg_img{
-  position: absolute;
-  height: 50%;  
-  bottom: 0%;
-  width: 100%;
-}
-.shape{
-    align-items: center;
-    align-self: center;
-    
-}
-/* table,th{
-    border-style: transparent;
-    border-width: 20px;
+      background-image: url("../image_frontend/bg-desktop.png");
+      background-position-y: bottom;
+      background-color: hsl(229, 57%, 11%);
+      background-repeat: repeat-x;
+    }
+  /* .shape{
+    display: flex;
+    flex: 1 1 auto;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
   } */
+  .shape {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    max-width: 180px;
+}
 
-.shape1{
-    border: 20px;
+.shape > * {
+    flex: 1 1 auto;
+}
+  /* .shape{
+    position: flex;
+    flex-direction: row;
+  } */
+  .shape1{
+    border: 10px;
     border-radius: 12px 50px 12px 12px;
     padding: 20px;
-    width: 200px;
+    width: 260px;
     height: 100px;
     background-color: hsl(228, 56%, 26%);
+    text-align: left;
+    top:40%;
+    left:20%;
+    }
+  .shape2{
+    width: 45%;
+    top: 40%;
+    right: 20%;
+  }
+  .text{
+    margin-top: 5%;
+    align-self: flex-start;
+    margin-left: 5%;
+  }
+  .slidecontainer{
+    margin-top: 3%;
+    padding: .5%;
+    width: 100%;
+  }
+  /* .slidecontainer .slider .circle{
+    width: 2%;
+  } */
+  .limit{
+  margin-top: 1%;
+  margin-bottom: 3%;
+  }
+
+*{
+  margin: 0px;
+  padding: 0px;
+}
+section{
+  height: 100vh;
+  width: 100%;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+}
+/* .shape1{
+  border-radius: 12px 50px 12px 12px;
+  width: 90%;
+  background-color: hsl(228, 56%, 26%);
+} */
+.logo{
+  margin: 5%;
+  float: left;
+}
+.icon{
+  display: flex;
+  align-items:center;
+  margin-left: 9%;
+  margin-bottom: 9%;
+  width: 50%;
+justify-content: space-between;
+}
+.document,.folder,.upload{
+  background-color: hsl(228, 57%, 11%);
+padding: 7%;
+height: 20px;
+width: 20px;
+display:flex;
+justify-content: center;
+align-items: center;
+border-radius: 10px; 
+border: 5px solid hsl(228, 56%, 26%);
 }
 .shape2{
-    border-width: 20px;
+  border-width: 20px;
     border-radius: 12px 12px 12px 12px;
     padding: 20px;
     width: 300px;
     height: 100px;
     background-color: hsl(228, 56%, 26%);
+  color: white;
+  margin-top: 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
 }
-.slidecontainer {
-    width: 100%;
-  }
+.text{
+  margin-top: 10%;
+}
+.text span{
+  font-weight: bolder;
+}
+/* .slidecontainer{
+  background-color: hsl(228, 57%, 11%);
+  width: 90%;
+  margin-top: 5%;
+  padding: 1%;
+  border: 20px;
+}
+.slidecontainer .slider{
+  border-radius: 20px;
+  width: 81.5%;
+  background-image: linear-gradient(to right,hsl(6,100%, 80%), hs1(335, 100%, 65%));
+}
+.slidecontainer .slider .circle{
+  height: 10px;
+  background-color: white;
+  width: 4%;
+  border-radius: 10px;} */
+
+.limit{
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  font-weight: bold;
+  margin-top: 3%;
+  margin-bottom: 15%;
+}
+/* @media only screen and(min-width: 750px)
+{
   
-  .slider {
-     border-radius: 50px;
-    -webkit-appearance: none;
-    width: 100%;
-    height: 10px;
-    background: hsl(229, 73%, 7%);
-    outline: none;
-    opacity: 0.7;
-    -webkit-transition: .2s;
-    transition: opacity .2s;
-  }
-  
-  .slider:hover {
-    opacity: 1;
-  }
-  
-  .slider::-webkit-slider-thumb {border-radius: 50px;
+} */
+
+.slider {
+   border-radius: 50px;
+  -webkit-appearance: none;
+  width: 100%;
+  height: 10px;
+  background: palevioletred;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
   border-radius: 50px;
-    -webkit-appearance: none;
-    appearance: hsl(335, 100%, 65%);
-    width: 15px;
-    height: 15px;
-    background: hsl(335, 100%, 65%);
-    cursor: pointer;
-  }
+  -webkit-appearance: none;
+  appearance: hsl(335, 100%, 65%);
+  width: 15px;
+  height: 15px;
+  background: hsl(335, 100%, 65%);
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+
+  width: 25px;
+  height: 25px;
+  background: hsl(335, 100%, 65%);
+  cursor: pointer;
+}
+.slider{
+  background: linear-gradient(90deg, hsl(6, 100%, 80%), hsl(335, 100%, 65%));
+  border-radius: 20px;
+  height: 10px;
+  width: calc((815/1000)*100%);
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+/* p{
+    position: center;
+    color: azure;
+}
+.value{
+  display: flex;
+  justify-content: space-between;
+  color: hsl(243, 100%, 93%);
+}
+.icon{
+  border-radius: 6px;
+  max-width: 40px;
+ max-height: 3opx;
+  position: flex;
+  margin: 8px;
+  border: 6px solid hsl(229, 73%, 7%);
+  background-color: hsl(229, 73%, 7%);
+}
+.view{
+  position: relative;
+  width: auto;
+background: white;
+  border-radius: 10px 10px 0 10px;
+  padding: 20px;
+}
+.view::after{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: auto;
+    width: 0;
+    height: 0;
+    border: 38px solid transparent;
+    border-top-color: white;
+    border-bottom: 0;
+    border-right: 0;
+    margin-left: -18px;
+    margin-bottom: -20px;
+  } */
   
-  .slider::-moz-range-thumb {
-  
-    width: 25px;
-    height: 25px;
-    background: hsl(335, 100%, 65%);
-    cursor: pointer;
-  }
-  p{
-      align: center;
-      color: azure;
-  }
-  .value{
-    display: flex;
-    justify-content: space-between;
-    color: hsl(243, 100%, 93%);
-  }
+.bubble {
+  position: absolute;
+  left: 64%;
+  bottom: calc(100% + 30px);
+}
+
+.storage{
+  position: relative;
+  width: auto;
+background: #f5f5f5;
+  border-radius: 10px 10px 0 10px;
+  padding: 20px;
+}
+
+.storage:after {
+content: '';
+position: absolute;
+bottom: 0;
+left: auto;
+width: 0;
+height: 0;
+border: 38px solid transparent;
+border-top-color: #f5f5f5;
+border-bottom: 0;
+border-right: 0;
+margin-left: -18px;
+margin-bottom: -20px;
+}
+
+.msg {
+  font-size: xx-large;
+  font-weight: 700;
+  color: black;
+}
