--- a/frontend_mentor/css/huddle_landing_blocks.css
+++ b/frontend_mentor/css/huddle_landing_blocks.css
@@ -12,13 +12,12 @@ background-position: center center;
 background-size: cover;
 margin: 3px;
 text-align: center;
-max-width: 1200px;
+/* max-width: 1200px;
 max-height: 1200vh;
-justify-content: center;
+justify-content: center; */
 
 }
 header{
-    width: 100%;
     height: 90vh;
     background-color: rgb(222, 251, 252);
 }
@@ -42,7 +41,8 @@ header{
     height:60vh;
     margin-top: -500px;
     position: inline;
-    margin-right: 10px;
+
+    /* margin-right: 10px; */
 }
 .box1{
     width:40%;
@@ -68,16 +68,17 @@ h1{
 }
 .start{
   float: center;
-        width: 250px;
+         width: 250px;
         height: 40px;
         color: white;
         background-color:  hsl(322, 100%, 66%);
         border-radius: 10px;
-        margin-left: 90px;
+        border: hsl(322, 100%, 66%);
+        /* margin-left: 90px; */
     }
     .third{
         margin: 20px;
-        width: 100%;
+        /* width: 100%; */
         height: 70vh;
         margin: 80px;
         border: 5px solid rgb(167, 164, 164);
@@ -87,6 +88,7 @@ h1{
         width:40%;
         height: 30vh;
         margin-top: 25vh;
+        margin-left: 40px;
 
     }
     .right .pic{
@@ -96,7 +98,7 @@ h1{
     }
     .four{
         margin: 20px;
-        width: 100%;
+        /* width: 100%; */
         height: 70vh;
         margin: 80px;
         border: 5px solid rgb(167, 164, 164);
@@ -116,7 +118,7 @@ h1{
     }
     .five{
         margin: 20px;
-        width: 100%;
+        /* width: 100%; */
         height: 70vh;
         margin-right: 40px;
         margin-left: 80px;
@@ -127,6 +129,7 @@ h1{
         width:40%;
         height: 30vh;
         margin-top: 25vh;
+        margin-left: 40px;
 
 
     }
@@ -144,18 +147,19 @@ h1{
         justify-self: center;
         margin-left: 300px;
         margin-top: -90px;
-        position: relative;
+        /* position: relative; */
     
     }
     footer{
-        margin-left: 80px;
+        /* margin-left: 80px; */
         margin-top: 300px;
-        width:1200px;
-        height:60vh;
+        /* width:1200px; */
+        height:90vh;
         background-color: hsl(192, 100%, 9%);
         justify-self: baseline;
-        position: absolute;
+        /* position: absolute;  */
         font-size: large;
+    
 
     }
     .boxes{
@@ -177,5 +181,19 @@ a:hover
 {
     color:beige
 }
+.new{
+    list-style-type: none;
+    display: flex;
+    float:right;
+}
+.new.icon{
+    width: 40px;
+    height: 40px;
+    display: flex;
+    flex-direction: row;
+    margin: 4px;
+    border-radius: 5px;
+    justify-content: space-evenly;
     
+}
     
