--- a/index.css
+++ b/index.css
@@ -1,4 +1,10 @@
-
+body{
+    background-image: url("../angular-node/images/green.jpg");
+    line-break: 1vh;
+}
+div{
+    height: 5vh;
+}
 div:hover{
     color: rgb(44, 44, 235);
 }
