--- a/bg.css
+++ b/bg.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("./images/8fc719ea1aff1c5555d84db1d09cf237.jpg");
+    background-image: url("./images/white.webp");
     background-size: cover;
     font-size: larger;
 }
