--- a/frontend_mentor/css/order_summary.css
+++ b/frontend_mentor/css/order_summary.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&family=Red+Hat+Display:ital,wght@0,500;0,700;1,500;1,900&display=swap');
-    /* .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); } */
-    body {
+    /* .attribution  { font-size: 11px; text-align: center; }
+    .attribution a  { color: hsl(228, 45%, 44%); } */
+    body  {
         background-color:  hsl(225, 100%, 94%);
         display: flex;
         justify-content: center;
@@ -10,11 +10,11 @@
         font-family: 'Outfit', sans-serif;
         font-family: 'Red Hat Display', sans-serif;
     }
-    .bg_clr{
+    .bg_clr {
         height: 150vh;
         width: 350ch
     }
-    .container {
+    .container  {
         position: relative;
         background: hsl(0, 0%, 100%);
         text-align: center;
@@ -23,7 +23,7 @@
         max-width: 320px;
         height: 90vh;
     }
-    img {
+    img  {
         border-radius: 15px;
         display:flex;
         width: 100%;
@@ -32,7 +32,7 @@
         margin: 1em auto;
         height: 40%;    
     }
-    h2{
+    h2 {
         margin: auto;
         font-size: 1.2em;
         color: hsl(223, 47%, 23%);
@@ -41,7 +41,7 @@
         padding-top: 2%;
         padding-bottom: 2%;
     }
-    p{ padding-right: 2%;
+    p { padding-right: 2%;
         padding-left: 2%;
         padding-top: 2%;
         padding-bottom: 2%;
@@ -49,7 +49,7 @@
         font-size: 15px;
         color: hsl(223, 47%, 23%);
     } 
-    .music{
+    .music {
         border-radius: 4px;
         height: 60px;
         width:80%;
@@ -57,8 +57,8 @@
         margin: auto;
         background-color: hsl(225, 100%, 98%);
     }
-    .img_mus{
-        display: inline-block;
+    .img_mus {
+        display: block;
         border-radius: 18%;
         float:left;
         width: 50px ;
@@ -66,7 +66,7 @@
         padding: 2px;
         justify-content: flex-start;
     }
-    .text{
+    .text {
         display: inline-block;
         width: 100px ;
         height: 55px;
@@ -74,7 +74,7 @@
         justify-content: center;
 
     }
-    .change{
+    .change {
         color:  blue;
             padding-left: 5px ;
             display: inline-block;
@@ -83,17 +83,7 @@
             padding: 2px;
             justify-content: right;
         }
-        /* .payment{
-            color: white;
-            font-size: smaller;
-            border-width: 15px;
-            border-radius: 4px;
-            height: 30px;
-            width:80%;
-            justify-content: center;
-            background-color:   blueviolet;
-        }*/
-        .payment{
+        .payment {
             color: white;
             background-color: blue;
             border-color: blue;
@@ -103,7 +93,7 @@
             box-shadow:  5px 10px 20px hsl(245, 75%, 90%);
             color:white;
         }
-        .cancel{
+        .cancel {
             color: blue;
             background-color: white;
             border-radius: 8px;
@@ -111,28 +101,18 @@
             height: 30px;
             width:80%;
         }
-        /* .cancel{
-            color: blueviolet;
-            font-size: smaller;
-            border-width: 15px;
-            border-radius: 4px;
-            height: 30px;
-            width:80%;
-            justify-content: center;
-            margin: auto;
-            background-color:   white;
-        } */
-        a:hover{
+        
+        a:hover {
             color: red;
         cursor: pointer;
     opacity: 0.7;
     text-decoration: underline;
 }
-.cancel:hover{
+.cancel:hover {
     color: red;
     cursor: pointer;
 }
-.payment:hover{
+.payment:hover {
     color: yellow;
     cursor: pointer;
 }
