--- a/frontend_mentor/js/sunnyside.css
+++ b/frontend_mentor/js/sunnyside.css
@@ -319,7 +319,7 @@ div:hover {
     .menu {
       display: none;
     }
-    #menu {
+    .menus {
       display: block;
     }
   }
@@ -334,7 +334,7 @@ justify-content: center;
     .menu {
       display: none;
     }
-    #menu {
+    .menus {
       display: block;
     }
     .container {
@@ -372,46 +372,4 @@ justify-content: center;
     position: absolute;
     width: 100%;
 }
-
-
-  
-
-  
-
-
-  }
-/* .mobile-container {
-    max-width: 480px;
-    margin: auto;
-    background-color: #555;
-    height: 500px;
-    color: white;
-    border-radius: 10px;
-  } */
-  
-  /* .topnav {
-    overflow: hidden;
-    background-color: #333;
-    position: relative;
-  }
-  
-  .topnav .menu {
-    display: none;
-  }
-  
-  .topnav a {
-    color: white;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    display: block;
-  }
-  
-  .topnav a.icon {
-    display: block;
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  
-   */
+}
