--- a/frontend_mentor/js/project-tracking-intro-component-master/themes/project_tracking.css
+++ b/frontend_mentor/js/project-tracking-intro-component-master/themes/project_tracking.css
@@ -7,13 +7,13 @@ body {
 }
 .container {
     padding: 50px;
-    width: 800px;
+    width: 900px;
     height: 80vh;
-  border: 2px solide white;  
-margin-left: 200px;
-margin-top: 3vh;
-overflow-block: hidden;  
-background-color: white;
+    border: 2px solide white;  
+    margin-left: 200px;
+    margin-top: 3vh;
+    overflow-block: hidden;  
+    background-color: white;
 } 
 .bg {
     width:500px;
@@ -45,12 +45,13 @@ header {
     float: right;
     margin-left: 300px;
 }
-.open, .open1{
+.open, 
+.open1{
     text-decoration-line: none;
     text-decoration-color: none;
 } 
-.open{
-    color: rgb(35, 11, 70);
+*{
+    color: hsl(230, 29%, 20%);
 }
 .open1{
     color: rgb(167, 124, 231);
@@ -60,7 +61,7 @@ header {
     height: 70vh;
     position: absolute;
     margin-left: -50px;
-margin-top: 15vh;
+    margin-top: 15vh;
 }
 .left {
     width:50%;
@@ -73,7 +74,7 @@ margin-top: 15vh;
     float:right;
 }
 .illus {
-    width: 120%;
+    width: 130%;
     height: 100%;
 }
 .second {
@@ -96,7 +97,6 @@ h1 {
     border-radius: 8px;
     color: white;
     background-color: red;
-
 }
 .five {
     margin-top: 6vh;
@@ -111,8 +111,15 @@ h1:hover {
     color: lawngreen;
 }
 input:hover {
-    color: cyan;
+    color: greenyellow;
 }
 p:hover {
     color: darkblue;
+}
+p{
+    text-transform: uppercase;
+    color: hsl(231, 7%, 65%);
+}
+button:hover{
+    opacity: 0.8sec;
 }
