--- a/frontend_mentor/js/time-tracking-dashboard-main/themes/timetracking.css
+++ b/frontend_mentor/js/time-tracking-dashboard-main/themes/timetracking.css
@@ -19,11 +19,11 @@ body {
 .container_weekly, .container_daily,
 .container_monthly {
   background-color: hsl(226, 43%, 10%);
-  display: flex;
+  display: inline-flexbox;
   flex-direction: row;
   height: 60vh;
   justify-content: space-evenly;
-  margin-left:20%;
+  margin-left:15%;
   margin-top: 4vh;
   padding: 100px 5vh 100px 5vh;
   width:900px;
@@ -36,10 +36,17 @@ body {
     background-color: hsl(235, 46%, 20%);
     float: left;
 }
+.box4_week,
+.boxd_month,
+.boxz_day {
+    float: right;
+    margin-top: -60vh;
+}
 .box3_week,
 .boxc_month,
 .boxy_day {
-    float: center;
+    margin-left: 450px;
+    margin-top: -60vh;
 }
 
 .box2_week,
