--- a/frontend_mentor/js/article-preview-component-master/themes/article.css
+++ b/frontend_mentor/js/article-preview-component-master/themes/article.css
@@ -118,3 +118,15 @@ body {
     cursor: pointer;
     float: right;
   }
+@media screen and (max-width: 480px) {
+  .box {
+    display: flex;
+    flex-direction: column;
+  }
+  .left {
+    width: 100%;
+  }
+  .right {
+    width: 100%;
+  }
+}
